# plasma-widget-radiotray

./: CHANGELOG.md  CMakeLists.txt  INSTALL  README.md
cmake/: FindLIBVLCQT.cmake
plasmoid/: metadata.desktop
plasmoid/contents/code/: Config.js  PlayUtils.js
plasmoid/contents/config/: main.xml
plasmoid/contents/ui/: .FullRepresentation.qml.kate-swp  CompactRepresentation.qml  ConfigGeneral.qml  EditPlayListDelegate.qml  FullRepresentation.qml  PlayListDelegate.qml  PlayListModel.qml  PlayListView.qml  main.qml
plugin/: CMakeLists.txt  plasmoidplugin.cpp  plasmoidplugin.h  qmldir  radioplayer.cpp  radioplayer.h  radioplayersettings.cpp  radioplayersettings.h
translations/: CMakeLists.txt  TRANSLATORS.README  es_ES.po  extract-and-merge-messages.sh  radio.pot
uidesigner/: plasma-widget-radio.ui  plasma-widget-radio_list.ui
